--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,14 @@
     <!-- <link
       href="https://db.onlinewebfonts.com/c/21d12c1fb1566e0685bb6ace3a747dde?family=MegaFon+Graphik+LC+Web+Smbd+Regular"
       rel="stylesheet"
+    />
+    <link
+      href="https://db.onlinewebfonts.com/c/c7e87d8ed617299a830fd3f312606e6e?family=MegaFon+Graphik+LC+Web+Med+Regular"
+      rel="stylesheet"
+    />
+    <link
+      href="https://db.onlinewebfonts.com/c/55967df9d970b55494b5c17b82ddb86b?family=MegaFon+Graphik+LC+Web+Lgt+Regular"
+      rel="stylesheet"
     /> -->
 
     <title>React App</title>
